--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="stylesheet" type="text/css" href="./UI/styles/home.css" />
+    <link rel="stylesheet" type="text/css" href="./ui/styles/home.css" />
 
     <title>Auto Mart</title>
   </head>
