--- a/ui/html/carlist.html
+++ b/ui/html/carlist.html
@@ -15,10 +15,10 @@
       <div class="container clearfix">
         <h1 class="name"><a href="#">Auto Mart</a></h1>
         <ul class="main-nav">
-          <li><a href="./ui/html/allcar.html">Explore</a></li>
-          <li><a href="./ui/html/sellerad.html">Post Ad</a></li>
-          <li><a href="./ui/html/signin.html">Login</a></li>
-          <li><a href="./ui/html/register.html">Register</a></li>
+          <li><a href="./carlist.html">Explore</a></li>
+          <li><a href="./sellerad.html">Post Ad</a></li>
+          <li><a href="./signin.html">Login</a></li>
+          <li><a href="./register.html">Register</a></li>
         </ul>
       </div>
     </header>
