--- a/ui/html/carprofile.html
+++ b/ui/html/carprofile.html
@@ -15,7 +15,7 @@
       <div class="container clearfix">
         <h1 class="name"><a href="../../index.html">Auto Mart</a></h1>
         <ul class="main-nav">
-          <li><a href="./allcar.html">Explore</a></li>
+          <li><a href="./carlist.html">Explore</a></li>
           <li><a href="#">Post Ad</a></li>
           <li><a href="./signin.html">Login</a></li>
           <li><a href="./register.html">Register</a></li>
@@ -37,7 +37,7 @@
         <h3>Status: <span class="highlight1">Available</span></h3>
         <p class="desc">Dark Blue BMW in good condition for sale</p>
         <a href="./order.html">Request a purchase Order</a> <br />
-        <a href="./order.html">Report this car</a>
+        <a href="./report.html">Report this car</a> <br />
       </div>
     </div>
   </body>
