--- a/ui/html/sellerad.html
+++ b/ui/html/sellerad.html
@@ -15,8 +15,8 @@
           <div class="container clearfix">
             <h1 class="name"><a href="../../index.html">Auto Mart</a></h1>
             <ul class="main-nav">
-              <li><a href="./allcar.html">Explore</a></li>
-              <li><a href="#">Post Ad</a></li>
+              <li><a href="./carlist.html">Explore</a></li>
+              <li><a href="./sellerad.html">Post Ad</a></li>
               <li><a href="./signin.html">Login</a></li>
               <li><a href="./register.html">Register</a></li>
             </ul>
