[Feature #165953555] make purchase order

--- a/ui/html/carprofile.html
+++ b/ui/html/carprofile.html
@@ -16,7 +16,7 @@
         <h1 class="name"><a href="../../index.html">Auto Mart</a></h1>
         <ul class="main-nav">
           <li><a href="./carlist.html">Explore</a></li>
-          <li><a href="#">Post Ad</a></li>
+          <li><a href="./sellerad.html">Post Ad</a></li>
           <li><a href="./signin.html">Login</a></li>
           <li><a href="./register.html">Register</a></li>
         </ul>
@@ -36,8 +36,8 @@
         <h3>State: <span class="highlight1">New</span></h3>
         <h3>Status: <span class="highlight1">Available</span></h3>
         <p class="desc">Dark Blue BMW in good condition for sale</p>
-        <a href="./order.html">Request a purchase Order</a> <br />
-        <a href="./report.html">Report this car</a> <br />
+        <a href="./makeorder.html">Make a purchase Order</a> <br />
+        <a href="./reportcar.html">Report this car</a> <br />
       </div>
     </div>
   </body>
