--- a/ui/html/sellerad.html
+++ b/ui/html/sellerad.html
@@ -69,7 +69,7 @@
                 ><input
                   type="number"
                   id="price"
-                  placeholder="Confirm the price here"
+                  placeholder="Enter your price here"
                 />
             </li>
 
