[Feature #166617797] car flag page

--- a/ui/html/carprofile.html
+++ b/ui/html/carprofile.html
@@ -37,7 +37,7 @@
         <h3>Status: <span class="highlight1">Available</span></h3>
         <p class="desc">Dark Blue BMW in good condition for sale</p>
         <a href="./makeorder.html">Make a purchase Order</a> <br />
-        <a href="./reportcar.html">Report this car</a> <br />
+        <a href="./carflag.html">Report this car</a> <br />
       </div>
     </div>
   </body>
