--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       <div class="container clearfix">
         <h1 class="name"><a href="#">Auto Mart</a></h1>
         <ul class="main-nav">
-          <li><a href="./ui/html/carlist.html">Explore</a></li>
           <li><a href="./ui/html/sellerad.html">Post Ad</a></li>
+          <li><a href="./ui/html/carlist.html">Explore</a></li>
           <li><a href="./ui/html/signin.html">Login</a></li>
           <li><a href="./ui/html/register.html">Register</a></li>
+          <li><a href="./ui/html/admindash.html">Admin</a></li>
         </ul>
       </div>
     </header>
