--- a/ui/html/admindash.html
+++ b/ui/html/admindash.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="stylesheet" type="text/css" href="../styles/carlist.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/admindash.css" />
 
-    <title>Explore</title>
+    <title>Admin Dashboard</title>
   </head>
 
   <body>
@@ -31,7 +31,9 @@
         <div class="prod-info">
           <h2>BMW E320 for sale</h2>
           <h3>Price: <span class="price">$24,000</span></h3>
+          <p>Available</p>
           <a href="./carprofile.html">View more details</a> <br />
+          <button class="btn-delete">Delete</button>
         </div>
       </div>
       <div class="prod-card2">
@@ -41,7 +43,9 @@
         <div class="prod-info">
           <h2>Audi A6 for sale</h2>
           <h3>Price: <span class="price">$18,000</span></h3>
+          <p>Sold</p>
           <a href="./carprofile.html">View more details</a> <br />
+          <button class="btn-delete">Delete</button>
         </div>
       </div>
     </div>
