--- a/ui/html/carprofile.html
+++ b/ui/html/carprofile.html
@@ -15,10 +15,11 @@
       <div class="container clearfix">
         <h1 class="name"><a href="../../index.html">Auto Mart</a></h1>
         <ul class="main-nav">
-          <li><a href="./carlist.html">Explore</a></li>
           <li><a href="./sellerad.html">Post Ad</a></li>
+          <li><a href="./carlist.html">Explore</a></li>
           <li><a href="./signin.html">Login</a></li>
           <li><a href="./register.html">Register</a></li>
+          <li><a href="./admindash.html">Admin</a></li>
         </ul>
       </div>
     </header>
