[chore#166622463] adding filter feture

--- a/ui/html/admindash.html
+++ b/ui/html/admindash.html
@@ -24,6 +24,13 @@
       </div>
     </header>
     <div class="banner">
+      <label for="status">Filter By:</label>
+      <select>
+        <option value="price">Price</option>
+        <option value="make">Make</option>
+        <option value="state">Used</option>
+        <option value="state">New</option>
+      </select>
       <div class="prod-card">
         <div class="img">
           <img src="../assets/bmw.jpg" />
